--- a/style/pages/_addtciket.scss
+++ b/style/pages/_addtciket.scss
@@ -20,6 +20,10 @@
         caret-color: $main-color;
     }
 
+    select {
+        padding-left: 8px;
+    }
+
     input:focus, textarea:focus {
         border: 1px solid $main-color;
     }
