--- a/style/all.css
+++ b/style/all.css
@@ -118,6 +118,19 @@ html {
   font-size: 16px;
 }
 
+.c3-chart-arcs-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.c3-legend-item {
+  font-size: 14px;
+}
+
+.c3-tooltip-container {
+  width: 100%;
+}
+
 .form-input {
   margin-bottom: 16px;
   display: flex;
@@ -172,7 +185,7 @@ html {
   display: flex;
   margin-bottom: 60px;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-left: 8%;
 }
 .searchList-selector select {
@@ -181,6 +194,9 @@ html {
   padding: 8px 0 8px 12px;
   font-size: 16px;
   margin-right: 30px;
+}
+.searchList-chart {
+  width: 250px;
 }
 .searchList-result {
   display: flex;
